# DilDataPreProcessing

./: .gitignore  DATA_PATCH_LOG.md  README.md  README_ZH.md  pyproject.toml
MICS-CH/src/: align_ch_columns_v2.py  canonical_ch.py  canonicalize_ch_columns.py  dedup_ch_columns_v2.py  extract_ch_columns.py  llm.py  merge_ch_to_parquet.py  translate_ch_yaml.py  upload_align_summary_to_postgres.py  upload_ch_to_postgres.py
MICS-HH/: README.md
MICS-HH/docs/: hh_raw.yaml
MICS-HH/src/: align_hh_columns.py  align_hh_columns_v2.py  analyze_unmapped_hh_columns.py  canonical_hh.py  canonicalize_hh_columns.py  config.py  dedup_hh_columns.py  dedup_hh_columns_v2.py  extract_hh_columns.py  llm.py  merge_hh_to_parquet.py  translate_hh_yaml.py  upload_align_summary_to_postgres.py  upload_hh_to_postgres.py
MICS-HL/src/: align_hl_columns_v2.py  canonical_hl.py  canonicalize_hl_columns.py  config.py  dedup_hl_columns_v2.py  extract_hl_columns.py  merge_hl_to_parquet.py  translate_hl_yaml.py  upload_align_summary_to_postgres.py  upload_hl_to_postgres.py
MICS-WM/src/: align_wm_columns_v2.py  canonical_wm.py  canonicalize_wm_columns.py  config.py  dedup_wm_columns_v2.py  extract_wm_columns.py  merge_wm_to_parquet.py  patch_woman_age.py  translate_wm_yaml.py  upload_align_summary_to_postgres.py  upload_wm_to_postgres.py
MICS/app/: alignment.yaml  llm.py  main.py
MICS/docs/: SUMMARY_CN.md  SUMMARY_EN.md  bh_CN.md  bh_EN.md  ch_CN.md  ch_EN.md  fs_CN.md  fs_EN.md  gm_CN.md  gm_EN.md  hh_CN.md  hh_EN.md  hl_CN.md  hl_EN.md  wm_CN.md  wm_EN.md
MICS/etc/: generate_remaining.py  (+1 more)
(+20 files in other folders)
