[project]
name = "DilDataPreProcessing"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyreadstat>=1.3.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.49.0",
]
